chat/service-bosh.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-bosh
spec:
  ports:
  - port: 5280
    targetPort: 5280
    protocol: TCP
  selector:
    app: chat-prosody
