chat/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-web
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: chat-web
