chat/service-xmpp.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-xmpp
  annotations:
    metallb.universe.tf/allow-shared-ip: ap4y.home
spec:
  ports:
  - port: 5222
    targetPort: 5222
    nodePort: 30222
    protocol: TCP
  selector:
    app: chat-prosody
  type: LoadBalancer
  loadBalancerIP: 192.168.1.50
