chat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - chat.ap4y.me
    secretName: chat-certificate
  rules:
  - host: chat.ap4y.me
    http:
      paths:
      - path: /
        backend:
          serviceName: chat-web
          servicePort: 8000
      - path: /http-bind
        backend:
          serviceName: chat-bosh
          servicePort: 5280
      - path: /upload
        backend:
          serviceName: chat-bosh
          servicePort: 5280
